cmake_minimum_required(VERSION 3.26)
project(CPP_Modules)

set(CMAKE_CXX_STANDARD 14)

include_directories(cpp00/ex01)
include_directories(cpp01/ex00)
include_directories(cpp01/ex01)
include_directories(cpp01/ex03)
include_directories(cpp01/ex04)
include_directories(cpp01/ex05)
include_directories(cpp01/ex06)
include_directories(cpp02/ex00)
include_directories(cpp02/ex01)
include_directories(cpp02/ex02)
include_directories(cpp03/ex00)
include_directories(cpp03/ex01)
include_directories(cpp03/ex02)
include_directories(cpp03/ex03)
include_directories(cpp04/ex00)
include_directories(cpp04/ex01)
include_directories(cpp04/ex02)
include_directories(cpp04/ex03)
include_directories(cpp05/ex00)
include_directories(cpp05/ex01)
include_directories(cpp05/ex02)

add_executable(CPP_Modules
        cpp00/ex00/megaphone.cpp
        cpp00/ex01/add.cpp
        cpp00/ex01/contact.hpp
        cpp00/ex01/main.cpp
        cpp00/ex01/phonebook.cpp
        cpp00/ex01/phonebook.hpp
        cpp00/ex01/search.cpp
        cpp01/ex00/main.cpp
        cpp01/ex00/newZombie.cpp
        cpp01/ex00/randomChump.cpp
        cpp01/ex00/Zombie.cpp
        cpp01/ex00/Zombie.hpp
        cpp01/ex01/main.cpp
        cpp01/ex01/Zombie.cpp
        cpp01/ex01/Zombie.hpp
        cpp01/ex01/zombieHorde.cpp
        cpp01/ex02/main.cpp
        cpp01/ex03/HumanA.cpp
        cpp01/ex03/HumanA.hpp
        cpp01/ex03/HumanB.cpp
        cpp01/ex03/HumanB.hpp
        cpp01/ex03/main.cpp
        cpp01/ex03/Weapon.cpp
        cpp01/ex03/Weapon.hpp
        cpp01/ex04/addChar.cpp
        cpp01/ex04/fillNewFile.cpp
        cpp01/ex04/main.cpp
        cpp01/ex04/openAndCheck.cpp
        cpp01/ex04/Sifl.hpp
        cpp01/ex05/Harl.cpp
        cpp01/ex05/Harl.hpp
        cpp01/ex05/main.cpp
        cpp01/ex06/Harl.cpp
        cpp01/ex06/Harl.hpp
        cpp01/ex06/main.cpp
        cpp02/ex00/Fixed.cpp
        cpp02/ex00/Fixed.hpp
        cpp02/ex00/main.cpp
        cpp02/ex01/Fixed.cpp
        cpp02/ex01/Fixed.hpp
        cpp02/ex01/main.cpp
        cpp02/ex02/Fixed.cpp
        cpp02/ex02/Fixed.hpp
        cpp02/ex02/main.cpp
        cpp03/ex00/ClapTrap.cpp
        cpp03/ex00/ClapTrap.hpp
        cpp03/ex00/main.cpp
        cpp03/ex01/ClapTrap.cpp
        cpp03/ex01/ClapTrap.hpp
        cpp03/ex01/main.cpp
        cpp03/ex01/ScavTrap.cpp
        cpp03/ex01/ScavTrap.hpp
        cpp03/ex02/ClapTrap.cpp
        cpp03/ex02/ClapTrap.hpp
        cpp03/ex02/FragTrap.cpp
        cpp03/ex02/FragTrap.hpp
        cpp03/ex02/main.cpp
        cpp03/ex02/ScavTrap.cpp
        cpp03/ex02/ScavTrap.hpp
        cpp03/ex03/ClapTrap.cpp
        cpp03/ex03/ClapTrap.hpp
        cpp03/ex03/DiamondTrap.cpp
        cpp03/ex03/DiamondTrap.hpp
        cpp03/ex03/FragTrap.cpp
        cpp03/ex03/FragTrap.hpp
        cpp03/ex03/main.cpp
        cpp03/ex03/ScavTrap.cpp
        cpp03/ex03/ScavTrap.hpp
        cpp04/ex00/Animal.cpp
        cpp04/ex00/Animal.hpp
        cpp04/ex00/Cat.cpp
        cpp04/ex00/Cat.hpp
        cpp04/ex00/Dog.cpp
        cpp04/ex00/Dog.hpp
        cpp04/ex00/main.cpp
        cpp04/ex00/WrongAnimal.cpp
        cpp04/ex00/WrongAnimal.hpp
        cpp04/ex00/WrongCat.cpp
        cpp04/ex00/WrongCat.hpp
        cpp04/ex01/Animal.cpp
        cpp04/ex01/Animal.hpp
        cpp04/ex01/Brain.cpp
        cpp04/ex01/Brain.hpp
        cpp04/ex01/Cat.cpp
        cpp04/ex01/Cat.hpp
        cpp04/ex01/Dog.cpp
        cpp04/ex01/Dog.hpp
        cpp04/ex01/main.cpp
        cpp04/ex01/WrongAnimal.cpp
        cpp04/ex01/WrongAnimal.hpp
        cpp04/ex01/WrongCat.cpp
        cpp04/ex01/WrongCat.hpp
        cpp04/ex02/Animal.cpp
        cpp04/ex02/Animal.hpp
        cpp04/ex02/Brain.cpp
        cpp04/ex02/Brain.hpp
        cpp04/ex02/Cat.cpp
        cpp04/ex02/Cat.hpp
        cpp04/ex02/Dog.cpp
        cpp04/ex02/Dog.hpp
        cpp04/ex02/main.cpp
        cpp04/ex02/WrongAnimal.cpp
        cpp04/ex02/WrongAnimal.hpp
        cpp04/ex02/WrongCat.cpp
        cpp04/ex02/WrongCat.hpp
        cpp04/ex03/AMateria.cpp
        cpp04/ex03/AMateria.hpp
        cpp04/ex03/Character.cpp
        cpp04/ex03/Character.hpp
        cpp04/ex03/Cure.cpp
        cpp04/ex03/Cure.hpp
        cpp04/ex03/Ice.cpp
        cpp04/ex03/Ice.hpp
        cpp04/ex03/ICharacter.hpp
        cpp04/ex03/IMateriaSource.hpp
        cpp04/ex03/main.cpp
        cpp04/ex03/MateriaSource.cpp
        cpp04/ex03/MateriaSource.hpp
        cpp05/ex00/Bureaucrat.cpp
        cpp05/ex00/Bureaucrat.hpp
        cpp05/ex00/main.cpp
        cpp05/ex01/Bureaucrat.cpp
        cpp05/ex01/Bureaucrat.hpp
        cpp05/ex01/Form.cpp
        cpp05/ex01/Form.hpp
        cpp05/ex01/main.cpp
        cpp05/ex02/AForm.cpp
        cpp05/ex02/AForm.hpp
        cpp05/ex02/Bureaucrat.cpp
        cpp05/ex02/Bureaucrat.hpp
        cpp05/ex02/main.cpp
        cpp05/ex02/PresidentialPardonForm.cpp
        cpp05/ex02/PresidentialPardonForm.hpp
        cpp05/ex02/RobotomyRequestForm.cpp
        cpp05/ex02/RobotomyRequestForm.hpp
        cpp05/ex02/ShrubberyCreationForm.cpp
        cpp05/ex02/ShrubberyCreationForm.hpp
        3sum.cpp
        check_byteorder.c
        checker.c
        contest00.c
        exceptions.cpp
        func_ptr.c
        inher.cpp
        main.cpp
        membrefuncPtr.cpp
        palind.c
        polymorphism.cpp
        pow.cpp
        row.cpp
        rvo.cpp
        static.cpp
        stob.cpp
        test.cpp)
